[package]
name = "wled-audio-server"
version = "0.1.0"
edition = "2021"
default-run = "wled-audio-server"

[dependencies]
cpal = "0.17"
rustfft = "6.4"
clap = { version = "4", features = ["derive"] }
ctrlc = "3.4"


[[bin]]
name = "wled-audio-server"
path = "src/bin/main.rs"

[[bin]]
name = "test-receiver"
path = "src/bin/test_receiver.rs"
