[package]
name = "wled-audio-server"
version = "0.1.0"
edition = "2021"
default-run = "wled-audio-server"

[dependencies]
cpal = "0.17"
rustfft = "6.4"
clap = { version = "4.5.59", features = ["derive"] }
ctrlc = "3.4"
if-addrs = "0.15.0"
dialoguer = "0.12.0"


[[bin]]
name = "wled-audio-server"
path = "src/bin/main.rs"

[[bin]]
name = "test-receiver"
path = "src/bin/test_receiver.rs"
